# IEverything-cli-cpp

./: CMakeLists.txt  README.md  main.cpp
lib/: baseinclude.h
lib/utils/: coding.cpp  coding.hpp  files.cpp  files.hpp  pop.cpp  pop.hpp  url.cpp  url.hpp
lib/websocketpp/: connection.hpp  endpoint.hpp
lib/websocketpp/config/: asio_no_tls_client.hpp  core_client.hpp
lib/websocketpp/http/: parser.hpp
lib/websocketpp/impl/: connection_impl.hpp
lib/websocketpp/processors/: hybi13.hpp  processor.hpp
lib/websocketpp/roles/: client_endpoint.hpp
lib/websocketpp/transport/asio/: connection.hpp
src/UI/Win/: XCLogin.cpp  XCLogin.h  XCMain.cpp  XCMain.h  start.cpp  winmain.h
src/UI/Win/lib/: module_xcgui.h  module_xcgui_class.h  source_xcgui.cpp  source_xcgui.h  xcgui.h
src/UI/Win/lib/res/: IEver.xcproj  login.xml  main.xml
src/UI/Win/lib/x86/: XCGUI.lib
src/base/clipboard/: ClipboardGetDataWindows.hpp  ClipboardMonitor.cpp  ClipboardMonitor.h
src/base/config/: config.cpp  config.h  config_row.h
src/client/IEverAPI/: IEverAPI.cpp  IEverAPI.h  IEverAPI.hpp
src/client/ws/: WsClient.cpp  WsClient.h
